@@ -94,6 +94,12 @@ ea8d33cea0d8d84d04690364e405336bee51f5a9d529b92ee6df705d784d0741  test/results/m
 db89a21b1a275806d81e9ec64b820d28307abe53a1e72ffe93eb53ef772a78a8  test/results/multi_token_types.c-riscv32-binary
 e804edbd5ca96b1721773df95b6a96a79bebf2005a9fece7bbe3de253abaa8d5  test/results/multi_token_types.c-riscv64-binary
 412e54a8a1c1f1ff277ae55c12fd404cd4421f6e3e443f88f66f5ec81bfb501d  test/results/multi_token_types.c-x86-binary
+69f6e7749f80a1e967bfd2e1cfb71ff4056a54a813e80bd936b4a230e38a847a  test/results/negative_global_inits.c-aarch64-binary
+fc78a0bae1e011d9a575f3c1fcf8cdf7d8457cbfcaba5b86707cee0f2626a189  test/results/negative_global_inits.c-amd64-binary
+e0b264e1f8faf3ce2d417e62d9ef0d0eaf6590988e473743eeffe2e091e92e14  test/results/negative_global_inits.c-armv7l-binary
+bdfa59b769825e055e205ab54b1b318cc4f8d82b8dfe7ba9d9e1079bdc056559  test/results/negative_global_inits.c-riscv32-binary
+e8743d28a320925730badf873106bb0809a3d3b9f588b8c32446da129bd6d7c9  test/results/negative_global_inits.c-riscv64-binary
+7d743a60954a8aeb6bdc92d24156f266511dd912cb93569ea62ae5e3e62a97f1  test/results/negative_global_inits.c-x86-binary
 b0dd95933247d9edd5724321f98d0304c220564dd12bca2c111ad4f901f91ae9  test/results/pointer_arithmetic.c-aarch64-binary
 862d03fcd8a06c5aafd7b3b3846ff6cf7eed6976b309be9f3e19f0897eaaef59  test/results/pointer_arithmetic.c-amd64-binary
 0fea3df07396034aebdc0ad904d66b5678e49f99a84b1c88487c43bdb4684252  test/results/pointer_arithmetic.c-armv7l-binary
@@ -385,13 +391,13 @@ f745c3299b0b19f2087cfe202519885052535d45f49a67d5d52277bbc08bf7ec  test/results/t
 c96976f01c89b226355abbc4f3a41fb5af56aeceae56a1d00a57ccd274bfd18f  test/results/test0106-riscv32-binary
 d10e046b86feba8cbad7d51b882c5d7de03c144142372d93298606593f7ff087  test/results/test0106-riscv64-binary
 c1384b7a0760279ce35854c5828aba718a67c5b742fc7b770ecc69cf9fd84835  test/results/test0106-x86-binary
-9dd408a098777425a115e59d20047037bc4a3b3cb79341f69537a19ed4a069c0  test/results/test1000-aarch64-binary
-b1fa8cd8240291b00e50bae7ce9f22788366df89b9b16f188961bad1ba90b8e7  test/results/test1000-amd64-binary
-c223daaf124d9111824e6440a15bb210834455f560c9ab529e56f270b1f84f3f  test/results/test1000-armv7l-binary
-c79a93049d09c12515ef0824b6e8c972897234b0eff8abc26855768e07682fe6  test/results/test1000-knight-posix-binary
-d275590d49a227932c467feea59fb393936af2a6414e3349988096f2bc9f2965  test/results/test1000-riscv32-binary
-76d882bca3a86d7f21caf0ebc53fd0b9a7c5226898f2373d6fec6d03ea1d6a52  test/results/test1000-riscv64-binary
-572e163cf833441d0611e8cef1c2d299733aa9b8545f74295a6a20f67029e790  test/results/test1000-x86-binary
+394fb9385334973efe51224c38f3e53bfb674211c34b8a0d39531ddb9e26c519  test/results/test1000-aarch64-binary
+aa3fa21244f1f5e2b521ca98e6c9a4114242d86f18e7be9a9c0e73e5c841b6bb  test/results/test1000-amd64-binary
+2122014bf7ba9374f1b404e7d7d577123856f1ffd3c84e3b30ae7fdcde0654c4  test/results/test1000-armv7l-binary
+ef84f2b79d30632388559a256387b9bd158d468ca3f8f5b413784c13eb81d4c1  test/results/test1000-knight-posix-binary
+b4b8d5362f5828c560bb75e7f5622187ab718bd9b707be9147b782a1e29da3eb  test/results/test1000-riscv32-binary
+a5dccd7545708b8231191ce44f515c60a7e29eadb33728a43e940eb1531068ed  test/results/test1000-riscv64-binary
+28a29b574c0745ccc0ce1f5ab383f70ecf8cbe393212184b838ce7bcf7894d7b  test/results/test1000-x86-binary
 5762a62fa777225e8cef41f48cc4e1010db7978a31d68868ca8e3f2ea73d41b3  test/results/variables.c-aarch64-binary
 e7889b1136a9f55211e240ab53b4dae69555df02b0ab986cf68c77905a4eee77  test/results/variables.c-amd64-binary
 ac1298d6d1d8e4dd5eca046a654987b76ff339ae3124d314f2f3cb53be3cae5b  test/results/variables.c-armv7l-binary
