@@ -28,6 +28,7 @@ Added support for variadic functions.
 Added support for multiple global variable declarations per statement
 Added initial very hacky support for casting after dereferencing
 Added support for calling function pointers directly on global variables and struct members. Previously only locals worked.
+Added support for initializing global variables with negative values.
 
 ** Changed
 Space for local variables in functions is now allocated up front
